--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
-      background: url(robota_backgroud.jpg') no-repeat center center fixed;
+      background: url('robota_backgroud.jpg') no-repeat center center fixed;
       background-size: cover;
     }
 
