--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Robota - Innovación y Tecnología</title>
+  <title>Robota</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
@@ -30,6 +30,18 @@
 </head>
 
 <body class="text-white">
+  <!-- Header Navigation -->
+  <header class="bg-black bg-opacity-90 p-4 flex flex-col md:flex-row items-center justify-between">
+    <img src="Robota_logo.png" alt="Robota Logo" class="h-12 mb-2 md:mb-0">
+    <nav class="space-x-6 text-lg">
+      <a href="#nosotros" class="hover:underline">Nosotros</a>
+      <a href="#servicios" class="hover:underline">Servicios</a>
+      <a href="#productos" class="hover:underline">Productos</a>
+      <a href="#proyectos" class="hover:underline">Proyectos</a>
+      <a href="#contacto" class="hover:underline">Contacto</a>
+    </nav>
+  </header>
+
   <!-- Hero Section -->
   <section class="min-h-screen flex items-center justify-center bg-custom-dark backdrop-blur-sm">
     <div class="text-center">
@@ -37,15 +49,6 @@
       <p class="mt-4 text-xl">Innovación & Tecnología en Automatización</p>
     </div>
   </section>
-
-  <!-- Navigation -->
-  <nav class="bg-custom-dark p-4 flex justify-center space-x-6 text-lg">
-    <a href="#nosotros" class="hover:underline">Nosotros</a>
-    <a href="#servicios" class="hover:underline">Servicios</a>
-    <a href="#productos" class="hover:underline">Productos</a>
-    <a href="#proyectos" class="hover:underline">Proyectos</a>
-    <a href="#contacto" class="hover:underline">Contacto</a>
-  </nav>
 
   <!-- Nosotros -->
   <section id="nosotros" class="p-10 bg-custom-dark backdrop-blur-md">
