--- a/index.html
+++ b/index.html
@@ -30,17 +30,18 @@
 </head>
 
 <body class="text-white">
-  <!-- Header Navigation -->
-  <header class="bg-black bg-opacity-90 p-4 flex flex-col md:flex-row items-center justify-between">
-    <img src="Robota_logo.png" alt="Robota Logo" class="h-12 mb-2 md:mb-0">
-    <nav class="space-x-6 text-lg">
-      <a href="#nosotros" class="hover:underline">Nosotros</a>
-      <a href="#servicios" class="hover:underline">Servicios</a>
-      <a href="#productos" class="hover:underline">Productos</a>
-      <a href="#proyectos" class="hover:underline">Proyectos</a>
-      <a href="#contacto" class="hover:underline">Contacto</a>
-    </nav>
-  </header>
+<!-- Header Navigation -->
+<header class="fixed top-0 left-0 w-full z-50 bg-black bg-opacity-90 p-4 flex flex-col md:flex-row items-center justify-between backdrop-blur">
+  <img src="Robota_logo.png" alt="Robota Logo" class="h-12 mb-2 md:mb-0">
+  <nav class="space-x-6 text-lg">
+    <a href="#nosotros" class="hover:underline">Nosotros</a>
+    <a href="#servicios" class="hover:underline">Servicios</a>
+    <a href="#productos" class="hover:underline">Productos</a>
+    <a href="#proyectos" class="hover:underline">Proyectos</a>
+    <a href="#contacto" class="hover:underline">Contacto</a>
+  </nav>
+</header>
+
 
   <!-- Hero Section -->
   <section class="min-h-screen flex items-center justify-center bg-custom-dark backdrop-blur-sm">
@@ -103,5 +104,6 @@
     </div>
   </footer>
 </body>
+<div class="h-20 md:h-16"></div> <!-- Spacer to offset fixed header -->
 
 </html>
