--- a/index.html
+++ b/index.html
@@ -30,21 +30,23 @@
 </head>
 
 <body class="text-white">
-<!-- Header Navigation -->
-<header class="fixed top-0 left-0 w-full z-50 bg-black bg-opacity-90 p-4 flex flex-col md:flex-row items-center justify-between backdrop-blur">
-  <img src="Robota_logo.png" alt="Robota Logo" class="h-12 mb-2 md:mb-0">
-  <nav class="space-x-6 text-lg">
-    <a href="#nosotros" class="hover:underline">Nosotros</a>
-    <a href="#servicios" class="hover:underline">Servicios</a>
-    <a href="#productos" class="hover:underline">Productos</a>
-    <a href="#proyectos" class="hover:underline">Proyectos</a>
-    <a href="#contacto" class="hover:underline">Contacto</a>
-  </nav>
-</header>
+  <!-- Spacer for fixed header -->
+  <div class="h-20 md:h-16"></div>
 
+  <!-- Header Navigation -->
+  <header class="fixed top-0 left-0 w-full z-50 bg-black bg-opacity-90 p-4 flex flex-col md:flex-row items-center justify-between backdrop-blur">
+    <img src="Robota_logo.png" alt="Robota Logo" class="h-12 mb-2 md:mb-0">
+    <nav class="space-x-6 text-lg">
+      <a href="#nosotros" class="hover:underline">Nosotros</a>
+      <a href="#servicios" class="hover:underline">Servicios</a>
+      <a href="#productos" class="hover:underline">Productos</a>
+      <a href="#proyectos" class="hover:underline">Proyectos</a>
+      <a href="#contacto" class="hover:underline">Contacto</a>
+    </nav>
+  </header>
 
   <!-- Hero Section -->
-  <section class="min-h-screen flex items-center justify-center bg-custom-dark backdrop-blur-sm">
+  <section class="min-h-screen flex items-center justify-center bg-custom-dark backdrop-blur-sm px-6 md:px-20 lg:px-40">
     <div class="text-center">
       <h1 class="text-5xl font-extrabold text-custom-purple">Robota</h1>
       <p class="mt-4 text-xl">Innovación & Tecnología en Automatización</p>
@@ -52,13 +54,13 @@
   </section>
 
   <!-- Nosotros -->
-  <section id="nosotros" class="p-10 bg-custom-dark backdrop-blur-md">
+  <section id="nosotros" class="p-10 bg-custom-dark backdrop-blur-md px-6 md:px-20 lg:px-40">
     <h2 class="text-3xl font-bold text-custom-teal mb-4">Nosotros</h2>
     <p>Somos un emprendimiento enfocado en soluciones de automatización industrial con enfoque educativo y empresarial.</p>
   </section>
 
   <!-- Servicios -->
-  <section id="servicios" class="p-10">
+  <section id="servicios" class="p-10 px-6 md:px-20 lg:px-40">
     <h2 class="text-3xl font-bold text-custom-teal mb-4">Servicios</h2>
     <ul class="list-disc pl-6">
       <li>Integración de robots industriales</li>
@@ -68,19 +70,19 @@
   </section>
 
   <!-- Productos -->
-  <section id="productos" class="p-10 bg-custom-dark backdrop-blur-md">
+  <section id="productos" class="p-10 bg-custom-dark backdrop-blur-md px-6 md:px-20 lg:px-40">
     <h2 class="text-3xl font-bold text-custom-teal mb-4">Productos</h2>
     <p>Venta de brazos robóticos, sensores y componentes de automatización.</p>
   </section>
 
   <!-- Proyectos -->
-  <section id="proyectos" class="p-10">
+  <section id="proyectos" class="p-10 px-6 md:px-20 lg:px-40">
     <h2 class="text-3xl font-bold text-custom-teal mb-4">Proyectos</h2>
     <p>Hemos trabajado con instituciones educativas y empresas para implementar soluciones robóticas personalizadas.</p>
   </section>
 
   <!-- Contacto & Newsletter -->
-  <section id="contacto" class="p-10 bg-custom-dark backdrop-blur-md">
+  <section id="contacto" class="p-10 bg-custom-dark backdrop-blur-md px-6 md:px-20 lg:px-40">
     <h2 class="text-3xl font-bold text-custom-teal mb-4">Contacto</h2>
     <form action="https://formsubmit.co/tu-correo@example.com" method="POST" class="space-y-4">
       <input type="text" name="name" placeholder="Nombre" required class="w-full p-2 rounded text-black">
@@ -104,6 +106,5 @@
     </div>
   </footer>
 </body>
-<div class="h-20 md:h-16"></div> <!-- Spacer to offset fixed header -->
 
 </html>
