--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     }
 
     .bg-custom-dark {
-      background-color: rgba(0, 0, 0, 0.6);
+      background-color: rgba(0, 0, 0, 0.4);
     }
 
     .text-custom-purple {
-      color: #7c3aed;
+      color: 41ead4;
     }
 
     .text-custom-teal {
-      color: #14b8a6;
+      color: 41ead4;
     }
   </style>
 </head>
