--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     }
 
     .text-custom-purple {
-      color: #41ead4;
+      color: #266dd3;
     }
 
     .text-custom-teal {
-      color: #41ead4;
+      color: #266dd3;
     }
   </style>
 </head>
