--- a/index.html
+++ b/index.html
@@ -45,13 +45,14 @@
     </nav>
   </header>
 
-  <!-- Hero Section -->
-  <section class="min-h-screen flex items-center justify-center bg-custom-dark backdrop-blur-sm px-6 md:px-20 lg:px-40">
-    <div class="text-center">
-      <h1 class="text-5xl font-extrabold text-custom-purple">Robota</h1>
-      <p class="mt-4 text-xl">Innovación & Tecnología en Automatización</p>
-    </div>
-  </section>
+<!-- Hero Section -->
+<section class="min-h-screen flex items-center justify-center bg-custom-dark backdrop-blur-sm px-6 md:px-20 lg:px-40">
+  <div class="text-center">
+    <img src="Robota_logo.png" alt="Robota Logo" class="mx-auto h-32 md:h-40">
+    <p class="mt-6 text-xl text-white">Innovación & Tecnología en Automatización</p>
+  </div>
+</section>
+
 
   <!-- Nosotros -->
   <section id="nosotros" class="p-10 bg-custom-dark backdrop-blur-md px-6 md:px-20 lg:px-40">
