--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <!-- Header Navigation -->
   <header class="fixed top-0 left-0 w-full z-50 bg-black bg-opacity-90 p-4 flex flex-col md:flex-row items-center justify-between backdrop-blur">
-    <img src="Robota_logo.png" alt="Robota Logo" class="h-12 mb-2 md:mb-0">
+    <img src="Robota_logo_updated.png" alt="Robota Logo" class="h-12 mb-2 md:mb-0">
     <nav class="space-x-6 text-lg">
       <a href="#nosotros" class="hover:underline">Nosotros</a>
       <a href="#servicios" class="hover:underline">Servicios</a>
@@ -48,7 +48,7 @@
 <!-- Hero Section -->
 <section class="min-h-screen flex items-center justify-center bg-custom-dark backdrop-blur-sm px-6 md:px-20 lg:px-40">
   <div class="text-center">
-    <img src="Robota_logo.png" alt="Robota Logo" class="mx-auto h-32 md:h-40">
+    <img src="Robota_logo_updated.png" alt="Robota Logo" class="mx-auto h-32 md:h-40">
     <p class="mt-6 text-xl text-white">Innovación & Tecnología en Automatización</p>
   </div>
 </section>
