--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <!-- Header Navigation -->
   <header class="fixed top-0 left-0 w-full z-50 bg-black bg-opacity-90 p-4 flex flex-col md:flex-row items-center justify-between backdrop-blur">
-    <img src="Robota_logo_updated.png" alt="Robota Logo" class="h-12 mb-2 md:mb-0">
+    <img src="Robota_logo.png" alt="Robota Logo" class="h-12 mb-2 md:mb-0">
     <nav class="space-x-6 text-lg">
       <a href="#nosotros" class="hover:underline">Nosotros</a>
       <a href="#servicios" class="hover:underline">Servicios</a>
