--- a/index.html
+++ b/index.html
@@ -53,34 +53,46 @@
   </div>
 </section>
 
+<!-- Nosotros + 3 Columns Block -->
+<section id="nosotros" class="p-10 bg-custom-dark backdrop-blur-md px-6 md:px-20 lg:px-40">
+  <h2 class="text-3xl font-bold text-custom-teal mb-8 text-center">Nosotros</h2>
+  <p class="text-center max-w-3xl mx-auto mb-12">
+    Somos un emprendimiento enfocado en soluciones de automatización industrial con enfoque educativo y empresarial.
+  </p>
+  <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
 
-  <!-- Nosotros -->
-  <section id="nosotros" class="p-10 bg-custom-dark backdrop-blur-md px-6 md:px-20 lg:px-40">
-    <h2 class="text-3xl font-bold text-custom-teal mb-4">Nosotros</h2>
-    <p>Somos un emprendimiento enfocado en soluciones de automatización industrial con enfoque educativo y empresarial.</p>
-  </section>
+    <!-- Servicios -->
+    <div class="bg-black bg-opacity-40 p-6 rounded-lg text-center">
+      <img src="servicios.jpg" alt="Servicios" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="text-xl font-semibold text-custom-teal mb-2">Servicios</h3>
+      <p class="mb-4 text-sm">
+        Ofrecemos integración de robots industriales, capacitación especializada y consultoría en tecnologías de automatización avanzadas.
+      </p>
+      <a href="#servicios" class="inline-block mt-2 px-4 py-2 bg-custom-teal text-black font-semibold rounded hover:bg-white hover:text-black transition">Conocer más</a>
+    </div>
 
-  <!-- Servicios -->
-  <section id="servicios" class="p-10 px-6 md:px-20 lg:px-40">
-    <h2 class="text-3xl font-bold text-custom-teal mb-4">Servicios</h2>
-    <ul class="list-disc pl-6">
-      <li>Integración de robots industriales</li>
-      <li>Capacitación en automatización</li>
-      <li>Consultoría tecnológica</li>
-    </ul>
-  </section>
+    <!-- Productos -->
+    <div class="bg-black bg-opacity-40 p-6 rounded-lg text-center">
+      <img src="productos.jpg" alt="Productos" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="text-xl font-semibold text-custom-teal mb-2">Productos</h3>
+      <p class="mb-4 text-sm">
+        Contamos con brazos robóticos, sensores industriales y componentes de automatización de alta calidad para tu empresa o institución.
+      </p>
+      <a href="#productos" class="inline-block mt-2 px-4 py-2 bg-custom-teal text-black font-semibold rounded hover:bg-white hover:text-black transition">Conocer más</a>
+    </div>
 
-  <!-- Productos -->
-  <section id="productos" class="p-10 bg-custom-dark backdrop-blur-md px-6 md:px-20 lg:px-40">
-    <h2 class="text-3xl font-bold text-custom-teal mb-4">Productos</h2>
-    <p>Venta de brazos robóticos, sensores y componentes de automatización.</p>
-  </section>
+    <!-- Proyectos -->
+    <div class="bg-black bg-opacity-40 p-6 rounded-lg text-center">
+      <img src="proyectos.jpg" alt="Proyectos" class="w-full h-40 object-cover rounded mb-4">
+      <h3 class="text-xl font-semibold text-custom-teal mb-2">Proyectos</h3>
+      <p class="mb-4 text-sm">
+        Colaboramos con instituciones y empresas para diseñar e implementar soluciones personalizadas en automatización y robótica.
+      </p>
+      <a href="#proyectos" class="inline-block mt-2 px-4 py-2 bg-custom-teal text-black font-semibold rounded hover:bg-white hover:text-black transition">Conocer más</a>
+    </div>
 
-  <!-- Proyectos -->
-  <section id="proyectos" class="p-10 px-6 md:px-20 lg:px-40">
-    <h2 class="text-3xl font-bold text-custom-teal mb-4">Proyectos</h2>
-    <p>Hemos trabajado con instituciones educativas y empresas para implementar soluciones robóticas personalizadas.</p>
-  </section>
+  </div>
+</section>
 
   <!-- Contacto & Newsletter -->
   <section id="contacto" class="p-10 bg-custom-dark backdrop-blur-md px-6 md:px-20 lg:px-40">
