--- a/index.html
+++ b/index.html
@@ -63,36 +63,43 @@
 
     <!-- Servicios -->
     <div class="bg-black bg-opacity-40 p-6 rounded-lg text-center">
-      <img src="servicios.jpg" alt="Servicios" class="w-full h-40 object-cover rounded mb-4">
+      <img src="servicios.jpg" alt="Servicios" loading="lazy" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="text-xl font-semibold text-custom-teal mb-2">Servicios</h3>
       <p class="mb-4 text-sm">
         Ofrecemos integración de robots industriales, capacitación especializada y consultoría en tecnologías de automatización avanzadas.
       </p>
-      <a href="#servicios" class="inline-block mt-2 px-4 py-2 bg-custom-teal text-black font-semibold rounded hover:bg-white hover:text-black transition">Conocer más</a>
+      <a href="#servicios" class="inline-block mt-2 px-4 py-2 rounded font-semibold text-black" style="background-color: #41ead4;">
+        Conocer más
+      </a>
     </div>
 
     <!-- Productos -->
     <div class="bg-black bg-opacity-40 p-6 rounded-lg text-center">
-      <img src="productos.jpg" alt="Productos" class="w-full h-40 object-cover rounded mb-4">
+      <img src="productos.jpg" alt="Productos" loading="lazy" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="text-xl font-semibold text-custom-teal mb-2">Productos</h3>
       <p class="mb-4 text-sm">
         Contamos con brazos robóticos, sensores industriales y componentes de automatización de alta calidad para tu empresa o institución.
       </p>
-      <a href="#productos" class="inline-block mt-2 px-4 py-2 bg-custom-teal text-black font-semibold rounded hover:bg-white hover:text-black transition">Conocer más</a>
+      <a href="#productos" class="inline-block mt-2 px-4 py-2 rounded font-semibold text-black" style="background-color: #41ead4;">
+        Conocer más
+      </a>
     </div>
 
     <!-- Proyectos -->
     <div class="bg-black bg-opacity-40 p-6 rounded-lg text-center">
-      <img src="proyectos.jpg" alt="Proyectos" class="w-full h-40 object-cover rounded mb-4">
+      <img src="proyectos.jpg" alt="Proyectos" loading="lazy" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="text-xl font-semibold text-custom-teal mb-2">Proyectos</h3>
       <p class="mb-4 text-sm">
         Colaboramos con instituciones y empresas para diseñar e implementar soluciones personalizadas en automatización y robótica.
       </p>
-      <a href="#proyectos" class="inline-block mt-2 px-4 py-2 bg-custom-teal text-black font-semibold rounded hover:bg-white hover:text-black transition">Conocer más</a>
+      <a href="#proyectos" class="inline-block mt-2 px-4 py-2 rounded font-semibold text-black" style="background-color: #41ead4;">
+        Conocer más
+      </a>
     </div>
 
   </div>
 </section>
+
 
   <!-- Contacto & Newsletter -->
   <section id="contacto" class="p-10 bg-custom-dark backdrop-blur-md px-6 md:px-20 lg:px-40">
