--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <!-- Productos -->
     <div class="bg-black bg-opacity-40 p-6 rounded-lg text-center">
-      <img src="productos.jpg" alt="Productos" loading="lazy" class="w-full h-40 object-cover rounded mb-4">
+      <img src="robota_backgroud.jpg" alt="Productos" loading="lazy" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="text-xl font-semibold text-custom-teal mb-2">Productos</h3>
       <p class="mb-4 text-sm">
         Contamos con brazos robóticos, sensores industriales y componentes de automatización de alta calidad para tu empresa o institución.
@@ -87,7 +87,7 @@
 
     <!-- Proyectos -->
     <div class="bg-black bg-opacity-40 p-6 rounded-lg text-center">
-      <img src="proyectos.jpg" alt="Proyectos" loading="lazy" class="w-full h-40 object-cover rounded mb-4">
+      <img src="nosotros.jpg" alt="Proyectos" loading="lazy" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="text-xl font-semibold text-custom-teal mb-2">Proyectos</h3>
       <p class="mb-4 text-sm">
         Colaboramos con instituciones y empresas para diseñar e implementar soluciones personalizadas en automatización y robótica.
