--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <section id="nosotros" class="p-10 bg-custom-dark backdrop-blur-md px-6 md:px-20 lg:px-40">
   <h2 class="text-3xl font-bold text-custom-teal mb-8 text-center">Nosotros</h2>
   <p class="text-center max-w-3xl mx-auto mb-12">
-    Somos un emprendimiento enfocado en soluciones de automatización industrial con enfoque educativo y empresarial.
+    Somos una empresa familiar, dedicada a la automatización industrial y robótica, generando proyectos personalizados, fidelizados y de confiabilidad para cada cliente, automatizando y robotizando procesos que generan gran impacto en el recurso humano. Logrando alivianar la carga laboral del personal, evitar enfermedades a corto plazo y generando así una mayor productividad y eficiencia en la industria.
   </p>
   <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
 
@@ -66,7 +66,7 @@
       <img src="servicios.jpg" alt="Servicios" loading="lazy" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="text-xl font-semibold text-custom-teal mb-2">Servicios</h3>
       <p class="mb-4 text-sm">
-        Ofrecemos integración de robots industriales, capacitación especializada y consultoría en tecnologías de automatización avanzadas.
+        Diseñamos proyectos a la medida de cada cliente, según sus necesidades de espacio, tipos de productos, pesos, tiempos de ciclo y presupuesto.
       </p>
       <a href="#servicios" class="inline-block mt-2 px-4 py-2 rounded font-semibold text-black" style="background-color: #41ead4;">
         Conocer más
@@ -78,7 +78,7 @@
       <img src="robota_backgroud.jpg" alt="Productos" loading="lazy" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="text-xl font-semibold text-custom-teal mb-2">Productos</h3>
       <p class="mb-4 text-sm">
-        Contamos con brazos robóticos, sensores industriales y componentes de automatización de alta calidad para tu empresa o institución.
+        Contamos con variados productos para la automatización de diversos sectores industriales, ofreciendo a nuestros clientes la más alta calidad para garantizar precisión, confort, seguridad y durabilidad.
       </p>
       <a href="#productos" class="inline-block mt-2 px-4 py-2 rounded font-semibold text-black" style="background-color: #41ead4;">
         Conocer más
@@ -90,7 +90,7 @@
       <img src="nosotros.jpg" alt="Proyectos" loading="lazy" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="text-xl font-semibold text-custom-teal mb-2">Proyectos</h3>
       <p class="mb-4 text-sm">
-        Colaboramos con instituciones y empresas para diseñar e implementar soluciones personalizadas en automatización y robótica.
+        Somos especialistas en automatización de procesos industriales, interfaces de control, mantenimiento de equipos, migración de PLC y upgrade de equipos automatizados.
       </p>
       <a href="#proyectos" class="inline-block mt-2 px-4 py-2 rounded font-semibold text-black" style="background-color: #41ead4;">
         Conocer más
@@ -101,9 +101,40 @@
 </section>
 
 
-  <!-- Contacto & Newsletter -->
-  <section id="contacto" class="p-10 bg-custom-dark backdrop-blur-md px-6 md:px-20 lg:px-40">
-    <h2 class="text-3xl font-bold text-custom-teal mb-4">Contacto</h2>
+<!-- Contacto & Newsletter with Map and Info -->
+<section id="contacto" class="p-10 bg-custom-dark backdrop-blur-md px-6 md:px-20 lg:px-40">
+  <h2 class="text-3xl font-bold text-custom-teal mb-8 text-center">Contacto</h2>
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
+
+    <!-- Left Column: Map + CTA Buttons + Social -->
+    <div class="space-y-6">
+      <!-- Google Map -->
+      <div class="w-full h-64 md:h-80">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6648.203139886014!2d-70.841628!3d-33.576712!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662e7969e323b6d%3A0x56d212db875467a2!2sROBOTA!5e0!3m2!1sen!2scl!4v1750957369924!5m2!1sen!2scl" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+
+      <!-- CTA Buttons -->
+      <div class="flex flex-col space-y-3">
+        <a href="tel:+56997467681" class="inline-block px-4 py-2 bg-custom-teal text-black font-semibold rounded text-center">
+          📞 Call Center: +56 9 9746 7681
+        </a>
+        <a href="mailto:contacto@robota.cl" class="inline-block px-4 py-2 bg-custom-teal text-black font-semibold rounded text-center">
+          ✉️ contacto@robota.cl
+        </a>
+      </div>
+
+      <!-- Social Media -->
+      <div class="flex space-x-4 pt-4">
+        <a href="https://www.instagram.com/robotacl/" target="_blank" class="text-custom-teal hover:text-white text-2xl">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/robota-spa" target="_blank" class="text-custom-teal hover:text-white text-2xl">
+          <i class="fab fa-linkedin"></i>
+        </a>
+      </div>
+    </div>
+
+    <!-- Right Column: Contact Form -->
     <form action="https://formsubmit.co/tu-correo@example.com" method="POST" class="space-y-4">
       <input type="text" name="name" placeholder="Nombre" required class="w-full p-2 rounded text-black">
       <input type="email" name="email" placeholder="Email" required class="w-full p-2 rounded text-black">
@@ -112,9 +143,12 @@
         <input type="checkbox" name="newsletter" required>
         Acepto recibir noticias y promociones.
       </label>
-      <button type="submit" class="bg-custom-teal px-4 py-2 rounded font-semibold">Enviar</button>
+      <button type="submit" class="px-4 py-2 rounded font-semibold text-black" style="background-color: #41ead4;">
+        Enviar
+      </button>
     </form>
-  </section>
+  </div>
+</section>
 
   <!-- Footer -->
   <footer class="bg-black bg-opacity-70 text-center p-6">
