--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
 <!-- Nosotros + 3 Columns Block -->
 <section id="nosotros" class="p-10 bg-custom-dark backdrop-blur-md px-6 md:px-20 lg:px-40">
   <h2 class="text-3xl font-bold text-custom-teal mb-8 text-center">Nosotros</h2>
-  <p class="text-center max-w-3xl mx-auto mb-12">
-    Somos una empresa familiar, dedicada a la automatización industrial y robótica, generando proyectos personalizados, fidelizados y de confiabilidad para cada cliente, automatizando y robotizando procesos que generan gran impacto en el recurso humano. Logrando alivianar la carga laboral del personal, evitar enfermedades a corto plazo y generando así una mayor productividad y eficiencia en la industria.
-  </p>
+  <p class="text-left mb-12 md:px-6 lg:px-0">
+  Somos una empresa familiar, dedicada a la automatización industrial y robótica, generando proyectos personalizados, fidelizados y de confiabilidad para cada cliente, automatizando y robotizando procesos que generan gran impacto en el recurso humano. Logrando alivianar la carga laboral del personal, evitar enfermedades a corto plazo y generando así una mayor productividad y eficiencia en la industria.
+</p>
+
   <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
 
     <!-- Servicios -->
@@ -66,7 +67,7 @@
       <img src="servicios.jpg" alt="Servicios" loading="lazy" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="text-xl font-semibold text-custom-teal mb-2">Servicios</h3>
       <p class="mb-4 text-sm">
-        Diseñamos proyectos a la medida de cada cliente, según sus necesidades de espacio, tipos de productos, pesos, tiempos de ciclo y presupuesto.
+        Diseñamos proyectos a medida para cada cliente, considerando espacio, tipo de productos, pesos, tiempos de ciclo y presupuesto. Nuestra ingeniería se adapta a cada necesidad con precisión y eficiencia.
       </p>
       <a href="#servicios" class="inline-block mt-2 px-4 py-2 rounded font-semibold text-black" style="background-color: #41ead4;">
         Conocer más
@@ -78,7 +79,7 @@
       <img src="robota_backgroud.jpg" alt="Productos" loading="lazy" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="text-xl font-semibold text-custom-teal mb-2">Productos</h3>
       <p class="mb-4 text-sm">
-        Contamos con variados productos para la automatización de diversos sectores industriales, ofreciendo a nuestros clientes la más alta calidad para garantizar precisión, confort, seguridad y durabilidad.
+        Ofrecemos soluciones en productos para automatización industrial de alta calidad, garantizando precisión, seguridad, confort y durabilidad. Nuestros componentes se adaptan a múltiples sectores productivos.
       </p>
       <a href="#productos" class="inline-block mt-2 px-4 py-2 rounded font-semibold text-black" style="background-color: #41ead4;">
         Conocer más
@@ -90,7 +91,7 @@
       <img src="nosotros.jpg" alt="Proyectos" loading="lazy" class="w-full h-40 object-cover rounded mb-4">
       <h3 class="text-xl font-semibold text-custom-teal mb-2">Proyectos</h3>
       <p class="mb-4 text-sm">
-        Somos especialistas en automatización de procesos industriales, interfaces de control, mantenimiento de equipos, migración de PLC y upgrade de equipos automatizados.
+        Desarrollamos proyectos en automatización de procesos, interfaces de control, mantenimiento, migración de PLC y modernización de equipos. Robota entrega soluciones eficaces y adaptables a cada desafío.
       </p>
       <a href="#proyectos" class="inline-block mt-2 px-4 py-2 rounded font-semibold text-black" style="background-color: #41ead4;">
         Conocer más
