--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <!-- Nosotros + 3 Columns Block -->
 <section id="nosotros" class="p-10 bg-custom-dark backdrop-blur-md px-6 md:px-20 lg:px-40">
   <h2 class="text-3xl font-bold text-custom-teal mb-8 text-center">Nosotros</h2>
-  <p class="text-left mb-12 md:px-6 lg:px-0">
+ <p class="text-left mb-12 max-w-7xl mx-auto px-0 md:px-6 lg:px-0">
   Somos una empresa familiar, dedicada a la automatización industrial y robótica, generando proyectos personalizados, fidelizados y de confiabilidad para cada cliente, automatizando y robotizando procesos que generan gran impacto en el recurso humano. Logrando alivianar la carga laboral del personal, evitar enfermedades a corto plazo y generando así una mayor productividad y eficiencia en la industria.
 </p>
 
