--- a/index.html
+++ b/index.html
@@ -142,14 +142,21 @@
 </section>
 
   <!-- Footer -->
-  <footer class="bg-black bg-opacity-70 text-center p-6">
-    <p>&copy; 2025 Robota. Todos los derechos reservados.</p>
-    <div class="mt-2 space-x-4">
-      <a href="#" class="hover:text-custom-purple"><i class="fab fa-facebook"></i></a>
-      <a href="#" class="hover:text-custom-teal"><i class="fab fa-instagram"></i></a>
-      <a href="#" class="hover:text-custom-purple"><i class="fab fa-linkedin"></i></a>
+<footer class="bg-black bg-opacity-90 text-white py-8">
+  <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row items-center justify-between gap-4 text-sm">
+    
+    <!-- Footer Text -->
+    <p class="text-center md:text-left">&copy; 2025 Robota. Todos los derechos reservados.</p>
+    
+    <!-- Footer Navigation / Social -->
+    <div class="flex items-center space-x-6 text-xl">
+      <a href="#" class="hover:text-custom-teal transition duration-300 ease-in-out"><i class="fab fa-facebook-f"></i></a>
+      <a href="https://www.instagram.com/robotacl/" target="_blank" class="hover:text-custom-teal transition duration-300 ease-in-out"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/robota-spa" target="_blank" class="hover:text-custom-teal transition duration-300 ease-in-out"><i class="fab fa-linkedin-in"></i></a>
     </div>
-  </footer>
+  </div>
+</footer>
+
 </body>
 
 </html>
