--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
   </div>
 </section>
 
-  <!-- Footer -->
-<footer class="bg-black bg-opacity-90 text-white py-8">
+<!-- Sticky Footer -->
+<footer class="fixed bottom-0 w-full z-50 bg-black bg-opacity-90 text-white py-4">
   <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row items-center justify-between gap-4 text-sm">
     
     <!-- Footer Text -->
