--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
   </div>
 </section>
 
+  <!-- Spacer to prevent content from being hidden behind the sticky footer -->
+<div class="h-32 md:h-24"></div>
+
+
 <!-- Sticky Footer -->
 <footer class="fixed bottom-0 w-full z-50 bg-black bg-opacity-90 text-white py-4">
   <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row items-center justify-between gap-4 text-sm">
