--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
     .text-custom-teal {
       color: #266dd3;
     }
+
+    @media (max-width: 768px) {
+  body {
+    background-size: contain;
+    background-position: top center;
+  }
+}
+
   </style>
 </head>
 
