--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </header>
 
 <!-- Hero Section -->
-<section class="min-h-screen flex items-center justify-center bg-custom-dark backdrop-blur-sm px-6 md:px-20 lg:px-40">
+<section class="min-h-[80vh] md:min-h-screen flex items-center justify-center bg-custom-dark backdrop-blur-0 md:backdrop-blur-md px-6 md:px-20 lg:px-40">
   <div class="text-center">
     <img src="Robota_logo_updated.png" alt="Robota Logo" class="mx-auto h-32 md:h-40">
     <p class="mt-6 text-xl text-white">Innovación & Tecnología en Automatización</p>
@@ -57,7 +57,7 @@
 </section>
 
 <!-- Nosotros + 3 Columns Block -->
-<section id="nosotros" class="p-10 bg-custom-dark backdrop-blur-md px-6 md:px-20 lg:px-40">
+<section id="nosotros" class="min-h-[80vh] p-10 bg-custom-dark backdrop-blur-0 md:backdrop-blur-md px-6 md:px-20 lg:px-40">
   <h2 class="text-3xl font-bold text-custom-teal mb-8 text-center">Nosotros</h2>
  <p class="text-left mb-12 max-w-7xl mx-auto px-0 md:px-6 lg:px-0">
   Somos una empresa familiar, dedicada a la automatización industrial y robótica, generando proyectos personalizados, fidelizados y de confiabilidad para cada cliente, automatizando y robotizando procesos que generan gran impacto en el recurso humano. Logrando alivianar la carga laboral del personal, evitar enfermedades a corto plazo y generando así una mayor productividad y eficiencia en la industria.
@@ -106,9 +106,8 @@
 
 
 <!-- Contacto & Newsletter with Map and Enhanced CTA Buttons -->
-<section id="contacto" class="p-10 bg-custom-dark backdrop-blur-md px-6 md:px-20 lg:px-40">
+<section id="contacto" class="min-h-[80vh] p-10 bg-custom-dark backdrop-blur-0 md:backdrop-blur-md px-6 md:px-20 lg:px-40">
   <h2 class="text-3xl font-bold text-custom-teal mb-8 text-center">Contacto</h2>
-  
   <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-10 items-start">
 
     <!-- Left Column: Map + Stylish CTA Buttons -->
